--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: ⚙️ Build Spring Boot backend
-        run:
-            chmod +x mvnw
-            ./mvnw clean install -DskipTests=true
+      -- name: ⚙️ Build Spring Boot backend
+  run: |
+    chmod +x mvnw
+    ./mvnw clean install -DskipTests=true
+
 
       - name: 🧱 Set up Node.js
         uses: actions/setup-node@v3
